Update requirement file with needed packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 fpdf
 seaborn>=0.11.0
 pandas
-matplotlib
 scipy==1.6.3
 numpy==1.19.2
+matplotlib
+matplotlib
 matplotlib-scalebar
-opencv-python-headless==4.4.0.46
-opencv-python==4.4.0.46
+opencv-contrib-python-headless>=4.4.0.46
+opencv-contrib-python>=4.4.0.46
 scikit-image==0.17.2
 tqdm
+fpdf==1.7.2
+xlrd==2.0.1
+xlsxwriter==1.4.0
+openpyxl==3.0.7
+scikit-image
+scikit-learn
+scipy
+seaborn
+tifffile
