--- a/scripts/parameters_control_theory.cfg
+++ b/scripts/parameters_control_theory.cfg
@@ -1,5 +1,12 @@
 dataset_path='/ems/elsc-labs/avitan-l/Lab-Shared/Data/FeedingAssay2020/'
 
+# Size for full segments. 5000=10s, 15.1GB, 9m. 10,000=31GB and 15m.
+size='10000'
+
+# these parameters can be passed to the other two scripts, just note the path slightly changed
+repository_relative_to_script_path='../../ZebrafishBehaviorTracking/'
+opencv_conda_env='opencv_contrib_for_behavior'
+
 # for input folders (match main prefix)
 pref=''
 # for output folders (match main suffix)
